fix: 🐛 windows registration horizontal scrollbar

--- a/src/components/registration/registration.styles.scss
+++ b/src/components/registration/registration.styles.scss
@@ -1,3 +1,5 @@
+$scrollbarWidth: 20px;
+
 .registration {
 	text-align: center;
 
@@ -17,8 +19,8 @@
 		}
 
 		@include breakpoint($fromLarge) {
-			width: 60vw;
-			left: 40vw;
+			width: calc(60vw - #{$scrollbarWidth} * 2);
+			left: calc(40vw + #{$scrollbarWidth});
 		}
 	}
 
